removed dyn nav css

--- a/lloyds/css/dyn-nav.css
+++ b/lloyds/css/dyn-nav.css
@@ -1,270 +1,6 @@
           /**
           * CSS for dynamic navigation.
           */
-          div#main_res {
-          background: #FFF none repeat scroll 0 0;
-          border-left: 1px solid #D3E1F9;
-          margin-left: 209px;
-          padding-left: 5px;
-          padding-right: 4px;
-          }
-          div#main_res p {
-          margin-top: 0;
-          }
-          div#dyn_nav {
-          background: #FFF none repeat scroll 0 0;
-          position: relative;
-          float:left;
-          width: 22%;
-          min-height:100%;
-		  clear:both;
-		  margin-right: 3%;
-		  display:block;
-          }
-          div.dn-hdr {
-          background-color: #3366FF;
-          color: #FFF;
-          font-size: 14px;
-          height: 23px;
-          line-height: 23px;
-          margin: 0;
-          padding: 0;
-          }
-          /* Expert Search - add custom style for go back to main results link
-          displayed in expert search expanded mode with dynamic navigation. */
-          div.dn-exp {
-          font-size: 12px;
-          margin: 10px 0;
-          padding-left: 6px;
-          }
-     
-          a.dn-r-img {
-          position: absolute;
-          margin-top: 5px;
-          left: 7px;
-          }
-          #dyn_nav ul, li {
-          list-style-image: none;
-          list-style-position: outside;
-          list-style-type: none;
-          vertical-align: middle;
-          }
-			
-			a.dn-attr-v {
-				/* Allow left side spacing for the ">" */
-				
-				padding-left: 5px;
-			}
-          ul.dn-attr {
-          font-size: 0.875em;
-          margin: -10px 0 4px 0px;
-          }
-          ul.dn-attr-hidden {
-          background: #FFF none repeat scroll 0 0;
-          border-top: 1px solid #DFDFFF;
-          margin: 0;
-          padding: 4px 0 0 0;
-          }
-          .label-input-label {
-          color: GrayText;
-          }
-          li.dn-attr-hdr {
-          font-weight: bold;
-          outline-style: none;
-          padding-bottom: 2px;
-          padding-top: 2px;
-          margin-left:0 !important;
-          background-color:#efefef;
-          color:#666666;
-          }
-          .dn-attr-hdr-txt {
-          display: inline-block;
-          overflow: hidden;
-          width: 85%;
-          font-weight:bold;
-          font-size:12px;
-		  padding-left:5px;
-		  color:#151515;
-          }
-          li.dn-attr-hdr div {
-          width: 100%;
-          }
-          input.dn-zippy-input {
-          border-style: none;
-          font-size: 95%;
-          margin-bottom: 2px;
-          margin-left: 3px;
-          margin-top: 1px;
-          width: 97%;
-          }
-          div.dn-zippy-hdr {
-          cursor: pointer;
-          outline-style: none;
-          margin-left: 2px;
-          }
-      
-          ul.dn-attr a, a.dn-bar-link {
-          color: #333 !important;
-          text-decoration: none;
-          }
-          .dn-hidden {
-          display: none;
-          }
-          .dn-inline-block, .dn-bar-rt, .dn-bar-rt table, .dn-img, span.dn-more-img {
-          display: inline-block;
-          }
-          .dn-block {
-          display: block;
-          }
-          .ac-renderer {
-          background: white;
-          border-bottom: 1px solid #558BE3;
-          border-left: 1px solid #A2BFF0;
-          border-right: 1px solid #558BE3;
-          border-top: 1px solid #A2BFF0;
-          min-width: 200px;
-          max-width: 400px;
-          overflow-x: hidden;
-          position: absolute;
-          }
-      
-          .ac-renderer div b {
-          color: #3366FF;
-          }
-          .ac-renderer div.active {
-          background-color: #D5E2FF;
-          color: #000;
-          }
-          span.dn-attr-c {
-          color: #777;
-          float:right;
-          }
-          a.dn-attr-v {
-          display: block;
-          overflow-x: hidden;
-          width: 99%;
-          color:#333 !important;
-          }
-          a.dn-attr-v:visited, a.dn-bar-link:visited {
-          color: #1111CC;
-          }
-          a.dn-attr-v:hover {
-          text-decoration: underline;
-          }
-          a.dn-link, .dn-img {
-          outline-style: none;
-          }
-          .dn-overflow {
-          overflow-x: hidden;
-          font-weight:bold;
-      color:#003781!important;
-          }
-          .dn-bar-v {
-          color: white;
-          }
-          .dn-bar-rt {
-          border: 0 none;
-          float: right;
-          margin: -2px 5px 0 20px;
-          }
-          
-          span.dn-more-img {
-          height: 15px;
-          margin-right: 1px;
-          overflow: hidden;
-          position: relative;
-          vertical-align: text-bottom;
-          width: 15px;
-          }
-      
-      
-          div.dn-bar dfn {
-          font-size: 1.2em;
-          padding: 4px;
-          }
-          div.dn-bar a.cancel-url:hover {
-          text-decoration: line-through;
-          }
-          div.main-results {
-          position:relative;
-          float:right;
-          width:74%;
-          max-width:500px;
-          background-color:white;
-          
-          }
-          div.oneboxResults table {
-          width: 100%;
-          }
-
-		    div.dn-bar {
-			  position:relative;
-			  left:25%;
-			  float:left;
-          }
-
-		  #dn_button {
-			display: none;
-		}
-		
-		  .dn-img {
-			  background: transparent url("https://rawgit.com/stoneburnsoftware/gsa-resources/master/allianz/images/FBI1wtG.png") no-repeat scroll 0 0;
-			  border: 0 none;
-			  height: 12px;
-			  position: relative;
-			  width: 12px;
-          }
-		
-		  
-@media all and (max-width: 650px) {
-
-     #dyn_nav {
-          position:relative !important;
-          width:100% !important;
-          height: 500px;
-          min-height:0 !important;
-          display:none;
-          -moz-box-shadow: 0 0 5px 5px #c3c3c3;
-          -webkit-box-shadow: 0 0 5px 5px#c3c3c3;
-          box-shadow: 0 0 5px 5px #c3c3c3;
-          padding-bottom:15px;
-     }
-
-     #dyn_nav_col {
-          position:relative;
-          max-height:500px !important;
-          overflow:scroll;
-          overflow-x:hidden;
-     }
-
-     .dn-attr {
-          margin-left:10px;
-     }
-
-	#dn_button {
-		padding: 12px 30px;
-		text-align: center;
-		border: solid 1px #c9c9c9;
-		background-color: #003781;
-		display: block;
-		margin: 0 auto;
-		color: white;
-		font-size: 20px;
-		line-height: 20px;
-		margin-top: 20px;
-		cursor:pointer;
-		clear:both;
-	}
-
-	 #dn_button:hover {
-		background-color: #003781;
-		-webkit-box-shadow: 0px 0px 3px 2px rgba(0,0,0,0.1);
-		border: 1px solid #357E9E;
-		color:#fff;
-	 }
-		 
-	#filter_results_header {
-		margin-left: 0px !important;
-		}
-
-}
+			#attr_2, #attr_3, #attr_4, #attr_2 .dn-attr-hdr, #attr_3 .dn-attr-hdr, #attr_4 .dn-attr-hdr{
+						display:block;
+					}
