--- a/lloyds/css/gsa-styles.css
+++ b/lloyds/css/gsa-styles.css
@@ -29,3 +29,9 @@
 	.dyn-nav-wrapper, .main-search-wrapper, .right-hand-wrapper{
 		float:left;
 	}
+	
+	.mod-GASearch-showBy{
+		position:relative;
+	}
+	
+	
