--- a/lloyds/css/dyn-nav.css
+++ b/lloyds/css/dyn-nav.css
@@ -6,5 +6,11 @@
 					}
 					
 
-			
-			
+			.toggle-preview{
+				color: #0000cc !important;
+				background-image: url(preview_on.png);
+			}
+
+			div.floating-viewer
+				z-index:10;
+			}
