--- a/lloyds/css/gsa-styles.css
+++ b/lloyds/css/gsa-styles.css
@@ -2,7 +2,7 @@
 	
 	@font-face {
 		font-family: 'SansaLloydsSemiBold'; 
-		src: url(../fonts/sansa_lloyds_semibold-webfont.ttf); 
+		src: url(http://googledrive.com/host/0B8L9xZxCeK5mbThDRWFHLTlCNW8/general-dev/Sansa_Lloyds_SemiBold.ttf); 
 		font-weight: normal; 
 		font-style: normal;
 		}
