--- a/lloyds/css/gsa-styles.css
+++ b/lloyds/css/gsa-styles.css
@@ -1,11 +1,5 @@
     
-	
-	@font-face {
-		font-family: 'SansaLloydsSemiBold'; 
-		src: url(http://googledrive.com/host/0B8L9xZxCeK5mbThDRWFHLTlCNW8/general-dev/Sansa_Lloyds_SemiBold.ttf); 
-		font-weight: normal; 
-		font-style: normal;
-		}
+
 	
 	.site-selector{
 		height: 28px;
@@ -56,7 +50,7 @@
 		position:relative;
 	}
 	
-	#ldc-content .mod-GASearch .cp-searchBox {
+	#ldc-content .mod-GASearch .cp-searchBox , .nav-paging-container{
 		width: 99%;
 	}
 	
