--- a/lloyds/css/gsa-styles.css
+++ b/lloyds/css/gsa-styles.css
@@ -2,8 +2,9 @@
 	@font-face {
 		font-family: 'SansaLloydsSemiBold'; 
 		src: url(https://storage.googleapis.com/paul_thomas/Sansa_Lloyds_SemiBold.ttf); 
+		src: local(https://storage.googleapis.com/paul_thomas/Sansa_Lloyds_SemiBold.ttf); 
 		}
-	
+		
 	.site-selector{
 		height: 28px;
 		position: relative;
