--- a/bupa-angular/bupa_material.css
+++ b/bupa-angular/bupa_material.css
@@ -1,12 +1,16 @@
 .card-grid{
   font-size: 0;
 }
-  .card-grid .result-card{
-    padding-top:10px;
-    display:inline-table;
-    font-size:14px;
-    float:none;
-  }
+
+.row.card-grid .col.result-card{
+  padding-top:10px;
+  display:inline-table;
+  float:none;
+}
+
+.result-card{
+  font-size:14px;
+}
 
 .result-card iframe {
   margin-bottom: 10px;
@@ -28,6 +32,16 @@
     font-size: 18px;
   }
 
+  .result-item .benefits-list {
+    font-weight: bold;
+    margin-bottom: 10px;
+    margin-top: 10px;
+  }
+  .result-item .cta-list {
+    margin-bottom: 10px;
+    margin-top: 10px;
+  }
+
 a.view-more,
 a.view-more:hover,
 a.view-more:active {
@@ -37,6 +51,26 @@ a.view-more:active {
 
 .cluster-result {
   line-height: 2;
+}
+
+/*bupa icons*/
+
+i.check {
+  width:18px;
+  height: 16px;
+  background: url('http://www.bupa.co.uk/assets/Search/HMFTP/Bupa/images/benefits_tick.png') no-repeat 0 0 transparent;
+}
+
+i.cta {
+  width:18px;
+  height: 16px;
+  background: url('http://www.bupa.co.uk/assets/Search/HMFTP/Bupa/images/cta_request_callback.png') no-repeat 0 0 transparent;
+}
+
+i.phone {
+  width:22px;
+  height: 22px;
+  background: url('http://www.bupa.co.uk/assets/Search/HMFTP/Bupa/images/cta_phone.png') no-repeat 0 0 transparent;
 }
 
 /*extract from materializecss*/
