maps on fullscreen righthand side

--- a/bupa-angular/bupa_material.css
+++ b/bupa-angular/bupa_material.css
@@ -12,10 +12,6 @@
   font-size:14px;
 }
 
-.result-card .map {
-  margin-bottom: 10px;
-}
-
 .result-card iframe {
   margin-bottom: 10px;
 }
@@ -59,8 +55,22 @@ a.view-more:active {
   font-size: 18px;
 }
 
-.angular-google-map-container { 
-  height: 150px; 
+
+.result-card .angular-google-map-container { 
+  margin-bottom: 10px;
+}
+
+.result-card .map-banner .angular-google-map-container {
+  height: 150px; 	
+}
+
+.result-card .map-tall .angular-google-map-container {
+  width: 500px;
+  height: 488px;	
+}
+
+.result-card .map-tall {
+	float:right;
 }
 
 .card-banner {
@@ -440,3 +450,26 @@ i.phone {
         right: 100%; }
       .row .col.push-l12 {
         left: 100%; } }
+        
+/*********************
+  Media Query Classes
+**********************/
+@media only screen and (max-width : 600px) {
+  .hide-on-small-only, .hide-on-small-and-down {
+    display: none !important; } }
+
+@media only screen and (max-width : 992px) {
+  .hide-on-med-and-down {
+    display: none !important; } }
+
+@media only screen and (min-width : 601px) {
+  .hide-on-med-and-up {
+    display: none !important; } }
+
+@media only screen and (min-width: 600px) and (max-width: 992px) {
+  .hide-on-med-only {
+    display: none !important; } }
+
+@media only screen and (min-width : 993px) {
+  .hide-on-large-only {
+    display: none !important; } }
