--- a/bupa-angular/bupa_material.css
+++ b/bupa-angular/bupa_material.css
@@ -73,13 +73,25 @@ a.view-more:active {
 	float:right;
 }
 
-.card-banner {
+.image-banner {
 	width:100%;
 	height:150px;
 	background-repeat: no-repeat;
     background-position: center; 
     background-size: cover;
     position: relative;
+}
+
+.thumbnail-col {
+	width: 150px;
+    display: table-cell;
+    padding-left: 10px;
+    vertical-align: top;
+}
+
+.snippet-col {
+	display: table-cell;
+	vertical-align: top;
 }
 
 .call-tandc,
