Added left align on card text

--- a/bupa-angular/bupa_material.css
+++ b/bupa-angular/bupa_material.css
@@ -16,6 +16,7 @@
   vertical-align: top; 
   display: inline-block;
   float:none;
+  text-align: left;
 }
 
 @media only screen and (min-width: 993px){
