Added fix for long card names in collection holder

--- a/bupa-angular/bupa_material.css
+++ b/bupa-angular/bupa_material.css
@@ -29,6 +29,10 @@
 	padding:0 15px
 }
 
+.bupa-material ul.gsa_collections_holder {
+    min-width: 971px;
+}
+
 .result-card{
   font-size:14px;
 }
