--- a/bupa-angular/bupa_material.css
+++ b/bupa-angular/bupa_material.css
@@ -152,7 +152,7 @@ i.check {
 i.cta {
   width:18px;
   height: 16px;
-  background: url('http://www.bupa.co.uk/assets/Search/HMFTP/Bupa/images/cta_request_callback.png') no-repeat 0 0 transparent;
+  background: url('https://rawgit.com/stoneburnsoftware/gsa-resources/master/bupa-angular/img/cover details.png') no-repeat 0 0 transparent;
 }
 
 i.phone {
